

enum CMD_DEFINE
{
    	CMD_BORDER_CLIENT = 0x1000; //client命令
	CMD_LOGIN_REQ =0x1001;
	CMD_LOGIN_RESP = 0x1002;
	CMD_LOGOUT_REQ = 0x1003;
	CMD_LOGOUT_RESP = 0x1004;
	CMD_HEART_BEAT_REQ = 0x1005;
	CMD_HEART_BEAT_RESP = 0x1006;
	CMD_REGIST_REQ = 0x1007;
	ALIAS_REGIST_TO_LOGIN_RESP = 0x1008;
	CMD_USERLOG_REQ = 0x1009;
	CMD_QUERY_BEFORE_REGIST_REQ = 0x100a;       // 注册前查询有没有特殊信息，比如充值翻倍等
    	CMD_QUERY_BEFORE_REGIST_RESP = 0x100b;

    	
	CMD_MOVE_IN_ROOM_REQ = 0x1010;
	CMD_ROOM_SYNC_ON_LOGIN = 0x1011;

	CMD_REG_INIT_SHIP_REQ = 0x1020;
	CMD_REG_INIT_SHIP_RESP = 0x1021;           //设置初始飞船

	CMD_IS_ONLINE_REQ = 0x1022;	//判断其他玩家是否在线
    	CMD_IS_ONLINE_RESP= 0x1023;

    	CMD_GUIDE_STEP_REQ = 0x1024;	//新手引导数据
    	CMD_GUIDE_STEP_RESP= 0x1025;

    	CMD_UPDATE_RES_REQ = 0x1026;
    	CMD_UPDATE_RES_RESP = 0x1027;

    	CMD_AID_AWARD_REQ = 0x1028;	//获取附加奖励
    	CMD_AID_AWARD_RESP = 0x1029;

	CMD_GET_STRENGTH_REQ = 0x1030;	// 获取当前体力值
	CMD_GET_STRENGTH_RESP = 0x1031;
	CMD_ADD_STRENGTH_REQ = 0x1032;	// 增加体力
	CMD_ADD_STRENGTH_RESP = 0x1033;

	CMD_SERVER_RES_UPDATE = 0x1034;               //服务器主动 (资源更新)

	CMD_TASK_REFLEASH_RESP = 0x1035;            // 任务，成就，每日活跃3个系统收到新消息

	CMD_PLANET_USER_UPDATE = 0x1036;	//planet user更新通知

	CMD_NOTIFY_REFLESH_RESP = 0x1037;           // 跑马灯通知

	CMD_PLANET_GET_REQ = 0x1038;
	CMD_PLANET_GET_RESP = 0x1039;
	CMD_PLANET_COLLCT_REQ = 0x103a;
	CMD_PLANET_COLLCT_RESP = 0x103b;
	CMD_PVP_VIDEO_REQ = 0x103c;
	CMD_PVP_VIDEO_RESP = 0x103d;
	CMD_PLANET_SPEED_UP_REQ = 0x103e;
	CMD_PLANET_SPEED_UP_RESP = 0x103f;
	CMD_PLANET_RUINS_REQ = 0x1040;
	CMD_PLANET_RUINS_RESP = 0x1041;
	CMD_PLANET_MOVE_BASE_REQ = 0x1042;
	CMD_PLANET_MOVE_BASE_RESP = 0x1043;
	CMD_PLANET_RIDE_BACK_REQ = 0x1044;
	CMD_PLANET_RIDE_BACK_RESP = 0x1045;
	CMD_PLANET_RAID_REQ = 0x1046;
	CMD_PLANET_RAID_RESP = 0x1047;

	CMD_PLANET_MARK_REQ = 0x1048;
	CMD_PLANET_MARK_RESP = 0x1049;

	CMD_PLANET_SHIELD_BASE_REQ = 0x104a;
	CMD_PLANET_SHIELD_BASE_RESP = 0x104b;


	CMD_GET_KNIGHT_BAG_REQ = 0x1050;            // 获取侠客背包
	CMD_GET_KNIGHT_BAG_RESP = 0x1051;
	CMD_GET_ITEM_PACKAGE_REQ = 0x1052;          // 获取物品背包
	CMD_GET_ITEM_PACKAGE_RESP = 0x1053;

	CMD_UPDATE_TIMESTAMP_REQ = 0x1054;          // 每隔固定时间，比如5分钟，拉一下时间
	CMD_UPDATE_TIMESTAMP_RESP = 0x1055;         //

	CMD_CLIENT_CODE_SET_REQ = 0x1058;           // 客户端设置新手引导等的接口
	CMD_CLIENT_CODE_SET_RESP = 0x1059;

	CMD_GET_EXTDATA_AT_5AM_REQ = 0x105a;        // 拉5点更新的数据
	CMD_GET_EXTDATA_AT_5AM_RESP = 0x105b;

	CMD_GET_HUODONG_FLAG_REQ = 0x105c;          // 近主界面时拉活动flag
	CMD_GET_HUODONG_FLAG_RESP = 0x105d;

	CMD_OPEN_CHEST_REQ = 0x105e;                // 开宝箱
	CMD_OPEN_CHEST_RESP = 0x105f;

	CMD_SELL_ITEM_REQ = 0x1060;                 // 售出商品
	CMD_SELL_ITEM_RESP = 0x1061;

	CMD_TILI_REWARD_REQ = 0x1062;               // 领取体力
	CMD_TILI_REWARD_RESP = 0x1063;

	CMD_OPEN_GIFT_REQ = 0x1064;                  // 打开礼包
	CMD_OPEN_GIFT_RESP = 0x1065;

	CMD_REFLESH_QIYU_REQ = 0x1066;              // 拉奇遇
	CMD_REFLESH_QIYU_RESP = 0x1067;
	CMD_GET_QIYU_REQ = 0x1068;                  // 领奇遇
	CMD_GET_QIYU_RESP = 0x1069;
	CMD_DEL_QIYU_REQ = 0x106a;                  // 删奇遇
	CMD_DEL_QIYU_RESP = 0x106b;

	CMD_SHIP_FIX_REQ = 0x10fe;                      //飞船修理
	CMD_SHIP_FIX_RESP = 0x10ff;
	CMD_GET_SHIP_LIST_REQ = 0x1100;            	// 飞船列表
	CMD_GET_SHIP_LIST_RESP = 0x1101;
	CMD_CHANGE_LINEUP_REQ = 0x1102;             // 飞船布阵
	CMD_CHANGE_LINEUP_RESP = 0x1103;
	CMD_CHANGE_WEAPON_REQ = 0x1104;				// 武器装配
	CMD_CHANGE_WEAPON_RESP = 0x1105;
	CMD_SHIP_DEVELOPE_REQ = 0x1106;				// 飞船开发
	CMD_SHIP_DEVELOPE_RESP = 0x1107;
	CMD_BLUEPRINT_DEVELOPE_REQ = 0x1108;				// 图纸开发
	CMD_BLUEPRINT_DEVELOPE_RESP = 0x1109;
	CMD_SHIP_CREATE_REQ = 0x110a;				// 飞船添加
	CMD_SHIP_CREATE_RESP = 0x110b;
	CMD_SHIP_REMOVE_REQ   = 0x110c;				// 飞船删除
	CMD_SHIP_REMOVE_RESP  = 0x110d;
	CMD_SHIP_EQUIP_REQ	  = 0x110e;				// 飞船装备
	CMD_SHIP_EQUIP_RESP   = 0x110f;

	CMD_TRADE_GET_MONEY_REQ = 0x1110;			//获取贸易中心资源
	CMD_TRADE_GET_MONEY_RESP = 0x1111;

	CMD_WEAPON_UPGRADE_REQ  = 0x1112;			// 武器升级请求
	CMD_WEAPON_UPGRADE_RESP = 0x1113;


	CMD_GET_HOME_STATUS_REQ	= 0x1114;		//获取家园信息
	CMD_GET_HOME_STATUS_RESP	= 0x1115;
	CMD_GET_RESOURCE_REQ		= 0x1116;		//收取资源
	CMD_GET_RESOURCE_RESP		= 0x1117;	
	CMD_UPGRADE_RESOURCE_REQ	= 0x1118;		//升级资源
	CMD_UPGRADE_RESOURCE_RESP	= 0x1119;
	CMD_REMOVE_RESOURCE_REQ	= 0x111a;		//拆除资源
	CMD_REMOVE_RESOURCE_RESP	= 0x111b;
	CMD_CANCEL_BUILD_REQ		= 0x111c;		//取消建造/拆除
	CMD_CANCEL_BUILD_RESP		= 0x111d;
	CMD_SPEED_UP_BUILD_REQ		= 0x111e;		//加速建造
	CMD_SPEED_UP_BUILD_RESP		= 0x111f;

	CMD_UPGRADE_TECHNOLOGY_REQ	= 0x1120;		//升级技能
	CMD_UPGRADE_TECHNOLOGY_RESP	= 0x1121;
	CMD_GET_TECHNOLOGY_REQ		= 0x1122;		//获取技能
	CMD_GET_TECHNOLOGY_RESP		= 0x1123;
	CMD_SPEED_UP_TECHNOLOGY_REQ	= 0x1124;		//提速升级技能
	CMD_SPEED_UP_TECHNOLOGY_RESP= 0x1125;

	CMD_CREATE_EQUIP_REQ		= 0x112e;		//打造装备
	CMD_CREATE_EQUIP_RESP		= 0x112f;
	CMD_STRENGTH_EQUIP_REQ		= 0x1130;		//强化装备
	CMD_STRENGTH_EQUIP_RESP		= 0x1131;		
	CMD_SHIP_BREAK_REQ			= 0x1132;		//飞船突破
	CMD_SHIP_BREAK_RESP		= 0x1133;
	CMD_RESOLVE_EQUIP_REQ		= 0x1134;		//装备分解
	CMD_RESOLVE_EQUIP_RESP		= 0x1135;
	CMD_SHIP_ADD_EXP_REQ		= 0x1136;		//飞船加经验
	CMD_SHIP_ADD_EXP_RESP		= 0x1137;

	CMD_RESOLVE_BLUEPRINT_REQ		= 0x1138;		//飞船图纸分解
	CMD_RESOLVE_BLUEPRINT_RESP		= 0x1139;

	CMD_SHIP_ADD_ENERGY_EXP_REQ		= 0x1140;		//飞船能量槽
	CMD_SHIP_ADD_ENERGY_EXP_RESP		= 0x1141;

	CMD_EQUIP_LEVELUP_REQ = 0x1150;             // 装备升级
	CMD_EQUIP_LEVELUP_RESP = 0x1151;
	CMD_EQUIP_STARUP_REQ = 0x1152;              // 装备升星
	CMD_EQUIP_STARUP_RESP = 0x1153;
	CMD_EQUIP_PURIFY_REQ = 0x1154;				// 装备精炼
	CMD_EQUIP_PURIFY_RESP = 0x1155;
	CMD_EQUIP_REFINE_REQ = 0x1156;				// 装备洗炼
	CMD_EQUIP_REFINE_RESP = 0x1157;
	CMD_EQUIP_RECOIN_REQ = 0x1158;				// 装备重铸
	CMD_EQUIP_RECOIN_RESP = 0x1159;
	CMD_EQUIP_ENCHASE_REQ = 0x115a;				// 装备镶嵌
	CMD_EQUIP_ENCHASE_RESP = 0x115b;

	CMD_GEM_EQUIP_REQ = 0x1160;                // 宝石装备
	CMD_GEM_EQUIP_RESP = 0x1161;
	CMD_GEM_MIX_REQ = 0x1162;                  // 宝石合成
	CMD_GEM_MIX_RESP = 0x1163;
	

	CMD_MIJI_MIX_REQ = 0x1166;                  // 秘籍合成
	CMD_MIJI_MIX_RESP = 0x1167;
	CMD_MIJI_EQUIP_REQ = 0x1168;                // 秘籍装备
	CMD_MIJI_EQUIP_RESP = 0x1169;
	CMD_MIJI_LEVELUP_REQ = 0x116a;              // 秘籍升级
	CMD_MIJI_LEVELUP_RESP = 0x116b;
	CMD_MIJI_JINJIE_REQ = 0x116c;               // 秘籍进阶
	CMD_MIJI_JINJIE_RESP = 0x116d;

	CMD_SKILL_LEVELUP_REQ = 0x1070;             // 技能升级
	CMD_SKILL_LEVELUP_RESP = 0x1071;

	CMD_OPEN_BOOK_REQ = 0x1072;                 // 开启巨著
	CMD_OPEN_BOOK_RESP = 0x1073;
	CMD_BOOK_LEVELUP_REQ = 0x1074;              // 养成巨著
	CMD_BOOK_LEVELUP_RESP = 0x1075;

	CMD_OPEN_LOVER_REQ = 0x1076;                // 开启侠侣
	CMD_OPEN_LOVER_RESP = 0x1077;
	CMD_LOVER_LEVELUP_REQ = 0x1078;             // 侠侣养成
	CMD_LOVER_LEVELUP_RESP = 0x1079;

	CMD_MONEY2GOLD_REQ = 0x107a;                // 元宝换银币
	CMD_MONEY2GOLD_RESP = 0x107b;
	CMD_MONEY2HP_REQ = 0x107c;                  // 元宝换体力
	CMD_MONEY2HP_RESP = 0x107d;

	CMD_SHIP_LOTTERY_REQ = 0x107e;                 // 抽飞船碎片
	CMD_SHIP_LOTTERY_RESP = 0x107f;
	


	CMD_GET_TASK_LIST_REQ = 0x1080;                 //获取任务列表
	CMD_GET_TASK_LIST_RESP = 0x1081;
	CMD_GET_TASK_REWARD_REQ = 0x1082;	// 领取任务奖励
	CMD_GET_TASK_REWARD_RESP = 0x1083;



	//CMD_GET_CHENGJIU_REWARD_REQ = 0x1084;		// 领取成就奖励
	//CMD_GET_CHENGJIU_REWARD_RESP = 0x1085;
	//CMD_GET_DAILY_REWARD_REQ = 0x1086;		    // 领取活跃奖励
	//CMD_GET_DAILY_REWARD_RESP = 0x1087;
	//CMD_GET_VIP_REWARD_REQ = 0x1088;            // VIP奖励
	//CMD_GET_VIP_REWARD_RESP = 0x1089;
	//CMD_CHOUJIANG_HUODONG_REQ = 0x108a;         // 抽奖奖池时效活动
	//CMD_CHOUJIANG_HUODONG_RESP = 0x108b;


	CMD_PVE_REQ = 0x1200;                       //
	CMD_PVE_RESP = 0x1201;
	CMD_PVE_GET_REWARD_REQ = 0x1210;            // PVE 领取阶段性奖励
	CMD_PVE_GET_REWARD_RESP = 0x1211;
	CMD_PVE_WATCH_SHOW_REQ = 0x1212;            // PVE 观看过某章剧情后设一个标志
	CMD_PVE_WATCH_SHOW_RESP = 0x1213;
	CMD_PVE_CLEAR_REQ = 0x1214;                 // PVE扫荡
	CMD_PVE_CLEAR_RESP = 0x1215;
	CMD_PVE_RESET_JINGYING_REQ = 0x1216;        // 精英本重置挑战
	CMD_PVE_RESET_JINGYING_RESP = 0x1217;
	CMD_SPECIAL_STAGE_REQ = 0x1218;             // 特殊关卡
	CMD_SPECIAL_STAGE_RESP = 0x1219;

	CMD_PVE2_RESET_REQ = 0x1250;                // 纷争，重置
	CMD_PVE2_RESET_RESP = 0x1251;
	CMD_PVE2_GET_ENEMY_REQ = 0x1252;            // 获取下一个对手的详细信息(15个对手依次获得)
	CMD_PVE2_GET_ENEMY_RESP = 0x1253;
	CMD_PVE2_SET_ZHENXING_REQ = 0x1254;         // 设置阵型
	CMD_PVE2_SET_ZHENXING_RESP = 0x1255;
	CMD_PVE2_FIGHT_REQ = 0x1256;                // 纷争,战斗
	CMD_PVE2_FIGHT_RESP = 0x1257;
	CMD_PVE2_GET_REWARD_REQ = 0x1258;           // 纷争领取奖励
	CMD_PVE2_GET_REWARD_RESP = 0x1259;
	CMD_PVE2_SELECT_BUFF_REQ = 0x125a;          // 纷争，选择buff
	CMD_PVE2_SELECT_BUFF_RESP = 0x125b;
	CMD_PVE2_REFLESH_SHOP_REQ = 0x125c;         // 刷新pve2商店
	CMD_PVE2_REFLESH_SHOP_RESP = 0x125d;
	CMD_PVE2_SHOPPING_REQ = 0x125e;             // pve2商店购物
	CMD_PVE2_SHOPPING_RESP = 0x125f;

	CMD_KNIGHT_REFLEASH_LOCK_RESP = 0x1260;     // 战将锁同步

	//试炼
	CMD_TRIAL_GET_REWARD_REQ = 0x1274;               //获取奖励
	CMD_TRIAL_GET_REWARD_RESP = 0x1275;
	CMD_TRIAL_ADD_TICKET_REQ = 0x1276;
	CMD_TRIAL_ADD_TICKET_RESP = 0x1277;
	CMD_TRIAL_GET_TIMES_REQ = 0x1278;                   //获取次数信息
	CMD_TRIAL_GET_TIMES_RESP = 0x1279;
	CMD_TRIAL_OPEN_ATEA_REQ = 0x1280;                 //获取试炼区域信息
	CMD_TRIAL_OPEN_ATEA_RESP = 0x1281;
	CMD_TRIAL_GET_BUILDING_INFO_REQ = 0x1282; //获取试炼场景建筑信息
	CMD_TRIAL_GET_BUILDING_INFO_RESP = 0x1283;
	CMD_TRIAL_PVE_START_REQ = 0x1284;                                 //试炼PVE 开始
	CMD_TRIAL_PVE_START_RESP = 0x1285;
	CMD_TRIAL_PVE_END_REQ = 0x1286;                                 //试炼PVE 结束
	CMD_TRIAL_PVE_END_RESP = 0x1287;
	


	CMD_RANK_REQ = 0x1300; //查看排行榜
	CMD_RANK_RESP = 0x1301;

	CMD_ARENA_INFO_REQ = 0x1320; // 获取Arena信息
	CMD_ARENA_INFO_RESP = 0x1321; 
	CMD_ARENA_CHALLENGE_REQ = 0x1322; // 玩家在Arena申请战斗
	CMD_ARENA_CHALLENGE_RESP = 0x1323;
	CMD_ARENA_TIMES_REQ = 0x1324; // 增加次数
	CMD_ARENA_TIMES_RESP = 0x1325;
	CMD_ARENA_GET_DAILY_REWARD_REQ = 0x1326; //获取每日奖励
	CMD_ARENA_GET_DAILY_REWARD_RESP= 0x1327;
	CMD_ARENA_TITLE_REQ = 0x1328; //晋升竞技场称号
	CMD_ARENA_TITLE_RESP = 0x1329;

	CMD_WBOSS_USER_INFO_GET_REQ = 0x1350;			//获取世界BOSS玩家相关信息
	CMD_WBOSS_USER_INFO_GET_RESP = 0x1351;
	CMD_WBOSS_GET_RANK_REWARD_LIST_REQ = 0x1352;		//获取世界BOSS奖励列表
	CMD_WBOSS_GET_RANK_REWARD_LIST_RESP = 0x1353;
	CMD_WBOSS_ATTACK_REQ = 0x1354;				//获取世界BOSS开始挑战
	CMD_WBOSS_ATTACK_RESP = 0x1355;
	CMD_WBOSS_RANK_REQ = 0x1356;				//获取世界BOSS排行榜
	CMD_WBOSS_RANK_RESP = 0x1357;

	// 武林争霸
	CMD_WLZB_REG_REQ = 0x1360;                  // 武林争霸报名
	CMD_WLZB_REG_RESP = 0x1361;
	CMD_WLZB_RCD_REQ = 0x1362;                  // 武林争霸收看回放
	CMD_WLZB_RCD_RESP = 0x1363;
	CMD_WLZB_GET_FIGHT_INFO_REQ = 0x1364;       // 获取所有战斗信息
	CMD_WLZB_GET_FIGHT_INFO_RESP = 0x1365;
	CMD_WLZB_REWARD_REQ = 0x1366;               // 领奖
	CMD_WLZB_REWARD_RESP = 0x1367;
	CMD_WLZB_GET_REWARD_LIST_REQ = 0x1368;      // 获取武林争霸奖励列表，用户客户端显示规则
	CMD_WLZB_GET_REWARD_LIST_RESP = 0x1369;

	//邮箱
	CMD_MAIL_LIST_UPDATE = 0x13ff;               //服务器主动 (有新邮件)
	CMD_GET_MAIL_LIST_REQ = 0x1400;             //
	CMD_GET_MAIL_LIST_RESP = 0x1401;
	CMD_READ_MAIL_REQ = 0x1402;
	CMD_READ_MAIL_RESP = 0x1403;
	CMD_DEL_MAIL_REQ = 0x1404;                  // 删除邮件
	CMD_DEL_MAIL_RESP = 0x1405;
	CMD_SEND_MAIL_REQ = 0x1406;                  //发送邮件
	CMD_SEND_MAIL_RESP = 0x1407;

    	//好友

    	CMD_GET_FRIENDS_INFO_REQ = 0x141e;         //发送好友信息
    	CMD_GET_FRIENDS_INFO_RESP = 0x141f;
    	CMD_APPLY_FRIEND_REQ = 0x1420;         //申请好友
    	CMD_APPLY_FRIEND_RESP = 0x1421;
    	CMD_ACCEPT_FRIEND_REQ = 0x1422;       //接受好友
    	CMD_ACCEPT_FRIEND_RESP = 0x1423;
    	CMD_FRIEND_APPLY_UPDATE = 0x1424;               //服务器主动 (有新申请好友邮件)
    	CMD_BE_FRIEND_UPDATE = 0x1425;               //服务器主动 (好友列表更新)
    	CMD_REMOVE_FRIEND_REQ = 0x1426;
    	CMD_REMOVE_FRIEND_RESP = 0x1427;
    	CMD_BLACK_LIST_REQ = 0x1428;
    	CMD_BLACK_LIST_RESP = 0x1429;
    	CMD_TALK_LIST_REQ = 0x1430;
    	CMD_TALK_LIST_RESP = 0x1431;

	// 活动
	CMD_GET_ACTIVITY_LIST_REQ = 0x1450;       		// 获取当前活动列表
	CMD_GET_ACTIVITY_LIST_RESP = 0x1451;
	CMD_ACTIVITY_CHANGE_REQ = 0x1452;        		// 兑换活动
	CMD_ACTIVITY_CHANGE_RESP = 0x1453;
	CMD_ACTIVITY_SIGN_IN_REQ = 0x1454;		//签到
	CMD_ACTIVITY_SIGN_IN_RESP = 0x1455;
	CMD_ACTIVITY_FIRST_RECHARGE_REQ = 0x1456;	//首充
	CMD_ACTIVITY_FIRST_RECHARGE_RESP = 0x1457;
	CMD_ACTIVITY_RECHARGE_REQ = 0x1458;		//充值活动
	CMD_ACTIVITY_RECHARGE_RESP = 0x1459;
	CMD_ACTIVITY_CREDIT_RETURN_REQ = 0x145a;	//信用点返还
	CMD_ACTIVITY_CREDIT_RETURN_RESP = 0x145b;
	CMD_ACTIVITY_CONSUME_REQ = 0x145c;		//消费活动
	CMD_ACTIVITY_CONSUME_RESP = 0x145d;
	CMD_ACTIVITY_SEVEN_DAYS_REQ = 0x145e;		//开服七天
	CMD_ACTIVITY_SEVEN_DAYS_RESP = 0x145f;
	CMD_ACTIVITY_ONLINE_REQ = 0x1460;		//在线奖励
	CMD_ACTIVITY_ONLINE_RESP = 0x1461;
	CMD_ACTIVITY_POWER_REQ = 0x1462;		//战力奖励
	CMD_ACTIVITY_POWER_RESP = 0x1463;
	CMD_ACTIVITY_GROWTH_FUND_REQ = 0x1464;	//成长基金
	CMD_ACTIVITY_GROWTH_FUND_RESP = 0x1465;
	CMD_ACTIVITY_INVEST_REQ = 0x1466;		//投资
	CMD_ACTIVITY_INVEST_RESP = 0x1467;
	CMD_ACTIVITY_CHANGE_SHIP_REQ = 0x1468;		//飞船收集兑换
	CMD_ACTIVITY_CHANGE_SHIP_RESP = 0x1469;
	CMD_ACTIVITY_MONTH_SIGN_REQ = 0x146a;		//月签到
	CMD_ACTIVITY_MONTH_SIGN_RESP = 0x146b;
	

	CMD_CHAT_REQ = 0x151e;                      // 聊天请求
	CMD_CHAT_RESP = 0x151f;
	CMD_CHAT_MSG = 0x1521;                      // 聊天消息
	CMD_GET_CHAT_LOG_REQ = 0x1524;                  // 聊天记录请求
	CMD_GET_CHAT_LOG_RESP = 0x1525;

	CMD_CDKEY_REQ = 0x1528;
	CMD_CDKEY_RESP = 0x1529;

	CMD_CJSZ_EXCNANGE_LIST_REQ = 0x1530;        // 藏剑山庄兑换列表
	CMD_CJSZ_EXCNANGE_LIST_RESP = 0x1531;

	CMD_LEIJI_CHONGZHI_REQ = 0x1532;
	CMD_LEIJI_CHONGZHI_RESP = 0x1533;
	CMD_DANBI_CHONGZHI_REQ = 0x1534;
	CMD_DANBI_CHONGZHI_RESP = 0x1535;
	CMD_LOGIN_HUODONG_REQ = 0x1536;
	CMD_LOGIN_HUODONG_RESP = 0x1537;
	CMD_XIAOFEI_REQ = 0x1538;
	CMD_XIAOFEI_RESP = 0x1539;
	CMD_LEIJI_CHONGZHI_REWARD_REQ = 0x153a;
	CMD_LEIJI_CHONGZHI_REWARD_RESP = 0x153b;
	CMD_DANBI_CHONGZHI_REWARD_REQ = 0x153c;
	CMD_DANBI_CHONGZHI_REWARD_RESP = 0x153d;
	CMD_LOGIN_REWARD_REQ = 0x153e;
	CMD_LOGIN_REWARD_RESP = 0x153f;
	CMD_XIAOFEI_REWARD_REQ = 0x1540;
	CMD_XIAOFEI_REWARD_RESP = 0x1541;
	CMD_NEW_LEVEL_REQ = 0x1542;                 // 新等级礼包
	CMD_NEW_LEVEL_RESP = 0x1543;
	CMD_NEW_LEVEL_REWARD_REQ = 0x1544;
	CMD_NEW_LEVEL_REWARD_RESP = 0x1545;
	CMD_DUIHUAN_INFO_REQ = 0x1546;                 // 道具兑换活动
	CMD_DUIHUAN_INFO_RESP = 0x1547;
	CMD_DUIHUAN_REQ = 0x1548;
	CMD_DUIHUAN_RESP = 0x1549;
	CMD_LEIJI_XIAOFEI_REQ = 0x154a;                 // 累计消费
	CMD_LEIJI_XIAOFEI_RESP = 0x154b;
	CMD_LEIJI_XIAOFEI_REWARD_REQ = 0x154c;
	CMD_LEIJI_XIAOFEI_REWARD_RESP = 0x154d;

	CMD_HUODONG_LIST_REQ = 0x1550;              // 获取服务器上的时效性活动
	CMD_HUODONG_LIST_RESP = 0x1551;

	// 获取充值列表
	CMD_GET_RECHARGE_LIST_REQ = 0x1552;
	CMD_GET_RECHARGE_LIST_RESP = 0x1553;

	//额外活动
	CMD_GET_TOP_ACT_REQ = 0x1554;
	CMD_GET_TOP_ACT_RESP = 0x1555;

	//帮会
	CMD_CREATE_GROUP_REQ = 0x1600;              // 创建帮会
	CMD_CREATE_GROUP_RESP = 0x1601;
	CMD_GET_GROUP_REQ = 0x1602;                 // 获取帮会信息
	CMD_GET_GROUP_RESP = 0x1603;
	CMD_GROUP_CONTRIBUTE_REQ = 0x1604;          // 捐献
	CMD_GROUP_CONTRIBUTE_RESP = 0x1605;
	CMD_GROUP_LEVELUP_REQ = 0x1606;             // 升级
	CMD_GROUP_LEVELUP_RESP = 0x1607;
	CMD_GROUP_TECH_LEVELUP_REQ = 0x1608;          //科技升级
	CMD_GROUP_TECH_LEVELUP_RESP = 0x1609;
	CMD_GROUP_GET_TECH_REQ = 0x160a;          //获取科技信息
	CMD_GROUP_GET_TECH_RESP = 0x160b;
	CMD_GROUP_JOIN_CONDITION_REQ = 0x160c;                // 公会自动接受呢加入条件
	CMD_GROUP_JOIN_CONDITION_RESP = 0x160d;
	CMD_GROUP_JOIN_REQ = 0x160e;                // 加入公会
	CMD_GROUP_JOIN_RESP = 0x160f;
	CMD_GROUP_ALLOW_REQ = 0x1610;          		// 批准申请
	CMD_GROUP_ALLOW_RESP = 0x1611;
	CMD_GROUP_EXIT_REQ = 0x1612;                // 退出公会
	CMD_GROUP_EXIT_RESP = 0x1613;
	CMD_GROUP_KICK_REQ = 0x1614;                // 踢出公会
	CMD_GROUP_KICK_RESP = 0x1615;
	CMD_GROUP_JOB_REQ = 0x1616;              // 指定帮主、副帮主
	CMD_GROUP_JOB_RESP = 0x1617;
	CMD_GROUP_DISBAND_REQ = 0x1618;             // 解散公会
	CMD_GROUP_DISBAND_RESP = 0x1619;
	CMD_GROUP_SEARCH_REQ = 0x161a;              // 查找公会
	CMD_GROUP_SEARCH_RESP = 0x161b;
	CMD_GROUP_SHOP_REFRESH_REQ = 0x161c;        // 刷新商店
	CMD_GROUP_SHOP_REFRESH_RESP = 0x161d;
	CMD_GROUP_SHOPPING_REQ = 0x161e;            // 购买
	CMD_GROUP_SHOPPING_RESP = 0x161f;

	CMD_GROUP_BROADCAST_REQ = 0x1620;	// 修改公告简介
	CMD_GROUP_BROADCAST_RESP = 0x1621;

	CMD_GROUP_CONTRIBUTE_CD_REQ = 0x1622;	// 重置捐献锁
	CMD_GROUP_CONTRIBUTE_CD_RESP = 0x1623;

	CMD_GROUP_HELP_LIST_REQ = 0x1624;	//拉取帮助列表
	CMD_GROUP_HELP_LIST_RESP = 0x1625;
	CMD_GROUP_REQUEST_HELP_REQ = 0x1626;	//请求帮助
	CMD_GROUP_REQUEST_HELP_RESP = 0x1627;
	CMD_GROUP_HELP_REQ = 0x1628;	//帮助他人
	CMD_GROUP_HELP_RESP = 0x1629;

	CMD_GROUP_PVE_GET_INFO_REQ = 0x1630;           // 获取公会PVE信息
	CMD_GROUP_PVE_GET_INFO_RESP = 0x1631;
	CMD_GROUP_PVE_REQ = 0x1632;                 // 公会pve
	CMD_GROUP_PVE_RESP = 0x1633;
	CMD_GROUP_PVE_OK_REQ = 0x1634;          //公会pve结果
	CMD_GROUP_PVE_OK_RESP = 0x1635;
	CMD_GROUP_PVE_ADD_TIMES_REQ = 0x1636;        //公会PVE增加挑战次数
	CMD_GROUP_PVE_ADD_TIMES_RESP = 0x1637;
	CMD_GROUP_PVE_GET_REWARD_REQ = 0x1638;      //获取公会PVE奖励
	CMD_GROUP_PVE_GET_REWARD_RESP = 0x1639;

	CMD_GROUP_INVITE_REQ = 0x1640;	//星盟邀请
	CMD_GROUP_INVITE_RESP = 0x1641;
	CMD_GROUP_WORSHIP_REQ = 0x1642;	//星盟祭拜
	CMD_GROUP_WORSHIP_RESP = 0x1643;

	CMD_SDK_PAY_USERINFO_CALLBACK = 0x16fb;	//SDK购买回调
	CMD_SDK_PAY_CALLBACK = 0x16fc;	//SDK购买回调

	CMD_USER_SYNC_UPDATE = 0x16fd;               //服务器主动 (同步数据消息)

	CMD_NEW_GROUP_UPDATE  = 0x16fe;               //服务器主动 (有新星盟邀请邮件)
	CMD_GROUP_UPDATE = 0x16ff;                  // 服务器主动发送的公会更新消息


	CMD_MPZ_GET_REQ = 0x1700;					//拉取服务器信息
	CMD_MPZ_GET_RESP = 0x1701;
	CMD_MPZ_GET_RCD_REQ = 0x1702;				//拉取战斗记录
	CMD_MPZ_GET_RCD_RESP = 0x1703;
	CMD_MPZ_MASTER_REG_REQ = 0x1704;			//会长提交战场信息
	CMD_MPZ_MASTER_REG_RESP = 0x1705;
	CMD_MPZ_MEM_REG_REQ = 0x1706;				//门派成员报名
	CMD_MPZ_MEM_REG_RESP = 0x1707;

	CMD_TIANJI_GET_REQ = 0x1710;				//拉取天机锦囊信息
	CMD_TIANJI_GET_RESP = 0x1711;
	CMD_TIANJI_REQ = 0x1712;					//开启天机锦囊
	CMD_TIANJI_RESP = 0x1713;
	CMD_TIANJI_REWARD_REQ = 0x1714;				//领取天机锦囊累计奖励
	CMD_TIANJI_REWARD_RESP = 0x1715;
	CMD_TIANJI_REWARD_INFO_REQ = 0x1716;		//累计奖励列表
	CMD_TIANJI_REWARD_INFO_RESP = 0x1717;

	//购买
	CMD_SHOP_BUY_REQ = 0x171A;					
	CMD_SHOP_BUY_RESP = 0x171B;

	CMD_SHOP_TIME_ITEM_LIST_REQ = 0x171C;					
	CMD_SHOP_TIME_ITEM_LIST_RESP = 0x171D;

	CMD_UPDATE_SLAVE_DATA  = 0x172F;               //服务器主动 (SLAVE DATA更新)

	CMD_SLAVE_SYNC_DATA_REQ = 0x1730;			//同步奴隶信息
	CMD_SLAVE_SYNC_DATA_RESP = 0x1731;
	CMD_SLAVE_GET_RES_REQ = 0x1732;				//获取奴隶资源
	CMD_SLAVE_GET_RES_RESP = 0x1733;
	CMD_SLAVE_FREE_REQ = 0x1734;				// 释放奴隶
	CMD_SLAVE_FREE_RESP = 0x1735;
	CMD_SLAVE_SHOW_REQ = 0x1736;				//示众奴隶
	CMD_SLAVE_SHOW_RESP = 0x1737;
	CMD_SLAVE_WORK_REQ = 0x1738;				//工作奴隶
	CMD_SLAVE_WORK_RESP = 0x1739;
	CMD_SLAVE_FAWN_ON_REQ = 0x173A;			//奴隶讨好
	CMD_SLAVE_FAWN_ON_RESP = 0x173B;
	CMD_SLAVE_HELP_REQ = 0x173C;				//奴隶求助
	CMD_SLAVE_HELP_RESP = 0x173D;
	CMD_SLAVE_SEARCH_REQ = 0x173E;				//奴隶搜索
	CMD_SLAVE_SEARCH_RESP = 0x173F;
	CMD_SLAVE_ADD_TIMES_REQ = 0x1740;			//奴隶加次数
	CMD_SLAVE_ADD_TIMES_RESP = 0x1741;
	CMD_SLAVE_ATTACK_REQ = 0x1742;				//奴隶战斗
	CMD_SLAVE_ATTACK_RESP = 0x1743;

	CMD_BUILDING_UPGRADE_REQ = 0x1830;			//建筑升级
	CMD_BUILDING_UPGRADE_RESP = 0x1831;

	CMD_BUILDING_UPDATE_REQ = 0x1832;			//获取建筑信息
	CMD_BUILDING_UPDATE_RESP = 0x1833;

	CMD_BUILDING_UPGRADE_SPEED_UP_REQ = 0x1834;			//快速升级建筑
	CMD_BUILDING_UPGRADE_SPEED_UP_RESP = 0x1835;

	CMD_BUILD_QUEUE_ADD_REQ = 0x1836;			//添加建筑队列
	CMD_BUILD_QUEUE_ADD_RESP = 0x1837;
	CMD_BUILD_QUEUE_REMOVE_REQ = 0x1838;			//删除建筑队列
	CMD_BUILD_QUEUE_REMOVE_RESP = 0x1839;


    	CMD_ADD_MONEY_CALLBACK = 0x1900;            // 充值回调
    	CMD_CDKEY_INNER_REQ = 0x1902;
   	CMD_CDKEY_INNER_RESP = 0x1903;

  	CMD_TEST_ADD_MONEY_REQ = 0x18ff;            // 因为返回时1900

  	//获取其他玩家信息
  	CMD_GET_OTHER_USER_INFO_LIST_REQ = 0x19fa;
  	CMD_GET_OTHER_USER_INFO_LIST_RESP = 0x19fb;
  	CMD_GET_OTHER_USER_INFO_REQ = 0x19fc;
  	CMD_GET_OTHER_USER_INFO_RESP = 0x19fd;


    	//客户端的GM命令
    	CMD_CLIENT_GM_REQ = 0x19fe;				
    	CMD_CLIENT_GM_RESP = 0x19ff;

	// GM协议
	CMD_HTTPCB_GM_FIGHT_SIM_REQ = 0x2000;
	CMD_HTTPCB_GM_FIGHT_SIM_RESP = 0x2001;
	CMD_HTTPCB_GM_ADD_ITEM_REQ = 0x2002;
	CMD_HTTPCB_GM_ADD_ITEM_RESP = 0x2003;
	CMD_HTTPCB_GM_BLOCK_REQ = 0x2004;           // 封号
	CMD_HTTPCB_GM_BLOCK_RESP = 0x2005;

	CMD_MULTICAST = 0x2100;

};

//CMD_USER_LEVELUP_RESP = 0x1033;             // 主角升级
